# dayu-tracker

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  load_hermes_deps.sh  load_tracker_deps.sh
example_stat/: note.md
example_stat/12p12f9s/: 165066_vfd-data-stat.yaml  165154_vfd-data-stat.yaml  165155_vfd-data-stat.yaml  165159_vfd-data-stat.yaml  165163_vfd-data-stat.yaml  165166_vfd-data-stat.yaml  165169_vfd-data-stat.yaml  165171_vfd-data-stat.yaml  165176_vfd-data-stat.yaml  165178_vfd-data-stat.yaml  165181_vfd-data-stat.yaml  165183_vfd-data-stat.yaml  165186_vfd-data-stat.yaml
example_stat/1p9f9s_run/: 11179_vol-data-stat-dl.yaml  157121_vfd-data-stat-dl.yaml  157121_vol-data-stat-dl.yaml  167838_vfd-data-stat-dl.yaml  167838_vol-data-stat-dl.yaml  168881_vfd-data-stat-dl.yaml  168881_vol-data-stat-dl.yaml  75190_vfd-data-stat-dl.yaml  75190_vol-data-stat-dl.yaml  98522_vfd-data-stat-dl.yaml  98522_vol-data-stat-dl.yaml  note.md  task_to_file.yaml  task_to_file_512KB.yaml  task_to_file_inter.yaml
example_stat/2p2f_run/: 25138_vfd-data-stat-dl.yaml
example_stat/ddmd_12p4s/: 138070_vfd-data-stat.yaml  138071_vfd-data-stat.yaml  138074_vfd-data-stat.yaml  138110_vfd-data-stat.yaml  138112_vfd-data-stat.yaml  138140_vfd-data-stat.yaml  138171_vfd-data-stat.yaml  138173_vfd-data-stat.yaml  138193_vfd-data-stat.yaml  138219_vfd-data-stat.yaml  138232_vfd-data-stat.yaml  138249_vfd-data-stat.yaml  141057_vfd-data-stat.yaml  141175_vfd-data-stat.yaml  142048_vfd-data-stat.yaml  apriori_ddmd_12p4s_compact.yaml  ddmd_12p4s-task_to_file.yaml
example_stat/seq6f3s/: 32510_vfd-data-stat-dl.yaml  32510_vol-data-stat-dl.yaml  apriori_seq6f3s.yaml  seq6f3s-task_to_file.yaml
example_stat/seq9f9s/: 44025_vfd-data-stat-dl.yaml  44025_vol-data-stat-dl.yaml  apriori_seq9f9s.yaml  vfd-10s-seq9f9s-sankey-labeled.html  vfd-10s-seq9f9s-sankey.html  vfd-7s-seq9f9s-sankey.html  vfd-9s-seq9f9s-sankey-labeled.html  vfd-9s-seq9f9s-sankey.html  vol-2s-seq9f9s-sankey.html
example_stat/summer_sam_seq12f9s/: 170202_vfd-data-stat.yaml  apriori_summer_sam_seq12f9s_compact.yaml  summer_sam_seq12f9s-task_to_file.yaml  vfd-10s-summer_sam_seq12f9s-stats.yaml  vfd-9s-summer_sam_seq12f9s-sankey-labeled.html
example_stat/summer_sam_seq12f9s/saved_graph/: vfd-4s-summer_sam_seq12f9s-sankey-labeled-s4.html  vfd-6s-summer_sam_seq12f9s-sankey-labeled-s6.html  (+4 more)
flow_analysis/: Full_stat_to_Sankey.ipynb  Overhead_Analysis.ipynb  Overhead_Analysis_ndset.ipynb  Overhead_Analysis_nread.ipynb  README.md  VFD_full_stat_to_Sankey.ipynb  VFD_simple_stat_to_Sankey.ipynb  VFD_stat_to_Sankey.ipynb  VOL_stat_to_Sankey.ipynb  plot_bar_graph.ipynb  requirements.yaml  setup.py  task_file_dep_extract.py
flow_analysis/utils/: dependency_parser.py  full_stat2graph.py  prefetch_shema_parser.py  show_workflow_io_stat.py  stat_loader.py  stat_print.py  task_order_parser.py  vfd_graph2sankey.py  vfd_stat2graph.py  vol_graph2sankey.py  vol_stat2graph.py
jarvis/: README.md
paper/: dayu_example_sdg.ipynb
placement_schema/: 1p9f-op_idx.yaml  VFD_stat_to_prefetcher.ipynb  apriori_p-1p9f-1M.yml  apriori_p-1p9f.yaml
sample_output/: 26172_data-stat-vol.yaml  93952_data-stat-dl.yaml  93952_vfd-data-stat-dl.yaml  93955_data-stat-dl.yaml  93955_vfd-data-stat-dl.yaml  data-stat-dl.yaml
sample_output/9f10stages_stat/: 11179_vfd-data-stat-dl.yaml  11179_vol-data-stat-dl.yaml  157121_vfd-data-stat-dl.yaml  157121_vol-data-stat-dl.yaml  167838_vfd-data-stat-dl.yaml  167838_vol-data-stat-dl.yaml  168881_vfd-data-stat-dl.yaml  168881_vol-data-stat-dl.yaml  170958_vfd-data-stat-dl.yaml  170958_vol-data-stat-dl.yaml  5904_vfd-data-stat-dl.yaml  5904_vol-data-stat-dl.yaml  75190_vfd-data-stat-dl.yaml  75190_vol-data-stat-dl.yaml  77100_vfd-data-stat-dl.yaml  77100_vol-data-stat-dl.yaml  98522_vfd-data-stat-dl.yaml  98522_vol-data-stat-dl.yaml
sample_output/wrf-1proc2file2stage/: 11434_data-stat-dl.yaml  11434_vfd-data-stat-dl.yaml  210263_vfd-data-stat-dl.yaml  README.md  task_to_file.yaml
scratch_code/: Makefile_vfd  Makefile_vol  VFD_stat_to_prefetcher.ipynb  blob_code_ref.c  blob_code_simp.c  datalife_vol.c  datalife_vol_tracker.h  dset_code_ref.c  func_dic_733.txt  vpicio_uni_h5.c
scratch_code/placement_schema/: apriori_schema_thread-file.yaml
scratch_code/vfd_c/: H5FD_tracker_vfd.c  H5FD_tracker_vfd_log_c.h
scratch_code/vfd_cpp/: H5FD_tracker_vfd copy.cc  H5Iprivate.h  H5Pprivate.h  H5TSprivate.h  H5VLprivate.h
scratch_code/vfd_posix_c/: H5FDhermes.c
scratch_code/vol_cpp/: datalife_vol_int.hpp  datalife_vol_new.cpp
src/: CMakeLists.txt  Makefile  datalife_vol.c  datalife_vol.h  datalife_vol_int.h  datalife_vol_new.c  datalife_vol_new.cpp  datalife_vol_types.h  datalife_vol_types.hpp  note.md  old_note.md  tracker_vol.h  tracker_vol_int.h  tracker_vol_new.c  tracker_vol_types.h
src/utils/debug/: timer.h  (+4 more)
src/vfd/: CMakeLists.txt  H5FD_tracker_vfd.cc  H5FD_tracker_vfd.h  H5FD_tracker_vfd_err.h  H5FD_tracker_vfd_log.h  H5FDhermes.cc  H5FDhermes_log.h  Makefile  README.md  TODO.md  tracker_vol_types.h
src/vfd_posix_c/: Makefile
src/vol/: CMakeLists.txt  Makefile  old_note.md  tracker_vol.h  tracker_vol_int.h  tracker_vol_new.c  tracker_vol_types.h
stat_to_prefetch/: 1p9f-op_idx.yaml  VFD_stat_to_prefetcher.ipynb  apriori_p-1p9f-512KB.yml  apriori_p-1p9f.yaml  apriori_schema_example.yaml
stat_to_sankey/: VFD_stat_to_Sankey.ipynb  VFD_stat_to_prefetcher.ipynb  VOL_stat_to_Sankey.ipynb  dayu_logo.ipynb
stat_to_sankey/example_stat/: note.md
test/: 3264929_vol-data-stat-vol.yaml  64159_vol-data-stat-vol.yaml  89892_vfd-data-stat-dl.yaml  89892_vol-data-stat-dl.yaml  h5_write_read.py  run_test.sh  run_test_arldm.sh  vlen_h5_read2.py  vlen_h5_write.py  vlen_h5_write_read.py  vlen_sample.h5  working_test.sh
test/arldm_test/: config.yaml  config_copy.yaml  config_template.yaml  read_flinstones.py  run_test.sh
test/dset_overhead_test/: README.md  large_dset_read.py  large_dset_write.py  run_compare_test.sh  run_test_large_dset.sh  run_test_small_dset.sh  small_dset_read.py  small_dset_write.py
(+112 files in other folders)
